--- a/src/app/components/custom-sidenav/custom-sidenav.component.html
+++ b/src/app/components/custom-sidenav/custom-sidenav.component.html
@@ -1,17 +1,18 @@
-<div class="pt-6 text-center">
-    <img [width]="profilePicSize()" [height]="profilePicSize()" class="rounded-full mb-3 object-cover"
-        src="/assets/profile-picture.jpg" alt="">
-    <div [class.hide-header-text]="sideNavCollapsed()">
-        <h2 class="m-0 text-base">Your Channel</h2>
-        <p class="m-0 text-sm">Sydney Sweeney</p>
+<div class="bg-[url('/assets/images/ellipse.png')] bg-no-repeat">
+    <div class="pt-6 text-center">
+        <img [width]="profilePicSize()" [height]="profilePicSize()" class="w-[112px] mr-12"
+            src="/assets/images/logo.svg" alt="">
+        <img class="relative z-[9000] w-[40px] right-[-20px]" src="./assets/images/arrow.svg" alt="Arrow Banbif">
+
     </div>
+    <mat-nav-list>
+        @for (item of menuItems(); track item) {
+        <a mat-list-item class="menu-item" [routerLink]="item.route" routerLinkActive
+            #rla="routerLinkActive" [activated]="rla.isActive">
+            <mat-icon [ngClass]="{'bg-[#925af5] text-white rounded-full': rla.isActive}" matListItemIcon>
+                {{ item.icon }}</mat-icon>
+            <span matListItemTitle *ngIf="!sideNavCollapsed()">{{ item.label }}</span>
+        </a>
+        }
+    </mat-nav-list>
 </div>
-<mat-nav-list>
-    @for (item of menuItems(); track item) {
-    <a mat-list-item class="menu-item" [routerLink]="item.route" routerLinkActive="selected-menu-item"
-        #rla="routerLinkActive" [activated]="rla.isActive">
-        <mat-icon [fontSet]="rla.isActive ?'material-icons':'material-icons-outlined'" matListItemIcon>{{ item.icon }}</mat-icon>
-        <span matListItemTitle *ngIf="!sideNavCollapsed()">{{ item.label }}</span>
-    </a>
-    }
-</mat-nav-list>
