--- a/src/app/components/custom-sidenav/custom-sidenav.component.scss
+++ b/src/app/components/custom-sidenav/custom-sidenav.component.scss
@@ -17,3 +17,8 @@
     border-left-color: var(--primary-color);
     background: rgba(0, 0, 0, 0.05);
 }
+
+mat-icon {
+    display: table;
+    padding: 10px;
+}
